--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,9 @@
 [submodule "Tests/sheet.js"]
 	path = Tests/sheet.js
 	url = http://github.com/subtleGradient/Sheet.js.git
+[submodule "Converter/assets/art-script"]
+	path = Converter/assets/art-script
+	url = http://github.com/calyptus/art-script.git
+[submodule "Converter/assets/ast-js"]
+	path = Converter/assets/ast-js
+	url = http://github.com/calyptus/ast-js.git
